--- a/js-client/index.html
+++ b/js-client/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="minwidth">
+    <!-- <div class="minwidth">
         <table class="barchart" cellpadding="1" cellspacing="0">
             <tr>
                 <td>
@@ -70,7 +70,7 @@
                 <td>10</td>
             </tr>
         </table>
-    </div>
+    </div> -->
     <svg id="data-vis-container" width="600" height="500"></svg>
     <script src="index.js"></script>
 </body>
