--- a/js-client/index.html
+++ b/js-client/index.html
@@ -71,7 +71,7 @@
             </tr>
         </table>
     </div>
-    <svg id="data-vis-container" width="600" height="500"></svg>
+    <!-- <svg id="data-vis-container" width="600" height="500"></svg> -->
     <script src="index.js"></script>
 </body>
 
